--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "history": "^4.6.3",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
@@ -27,6 +28,12 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.3.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
     "koa-router": "^7.2.1",
@@ -38,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "node ./server/server.js"
+    "server": "node ./index.js"
   },
   "proxy": "http://localhost:4000"
 }
