--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "echarts-for-react": "^1.4.4",
     "history": "^4.6.3",
+    "jest-cli": "^20.0.4",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
     "koa-jwt": "^3.2.2",
     "koa-passport": "^3.0.0",
-    "koa-session": "^5.4.0",
+    "koa-session": "^5.5.0",
     "koa-static": "^4.0.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
