--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "ccap": "^0.6.10",
     "echarts-for-react": "^1.4.4",
     "history": "^4.6.3",
     "jest-cli": "^20.0.4",
